--- a/style.css
+++ b/style.css
@@ -12,7 +12,13 @@ body{
 
 header{
   height: 100px;
-  background: grey;
+  /* background: grey; */
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+ul{
+  display: flex;
+  list-style:  none;
 }
