--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ ul{
   display: flex;
   list-style:  none;  
   margin-right: 100px;
+  align-items: center;
 }
 
 ul li a{
@@ -48,7 +49,6 @@ li a:hover::after{
 
 main{
   display: flex;
-  border: 1px solid red;
   height:calc(100vh - 100px); /*subtracting 100px of header to 100vh main */
   align-items: center; /*for vertical alignment */
   justify-content: center; /*for horizontal alignment */
@@ -63,6 +63,9 @@ main{
   width: 30%;
 }
 
+main{
+  justify-content: space-evenly;
+}
 main h1{
   font-size: 54px;
   color: #133b4f;
@@ -73,9 +76,46 @@ main h2{
   font-size:25px ;
   color: #fca70c;
   font-weight: 400;
-  text-transform: uppercase
+  text-transform: uppercase;
+  letter-spacing: 8px;
 }
 
 p{
+  font-size: 15px;
+  font-weight: 400;
+  column-rule: #333;
+  line-height: 22px;
+  margin: 30px 0px;
  
+}
+
+.cta{
+  padding: 15px 30px;
+  background-color: #c4c4f7;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700; /*the numeric value for bold is 700 */
+  text-transform: uppercase;
+  border-radius:  50px;
+  cursor: pointer;
+  
+}
+
+.cta:hover{
+  background-color:#fca70c;
+  transition: 0.3s;
+}
+
+.signup-Btn{
+  padding: 10px 20px;
+  background-color: #c4c4f7;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700; /*the numeric value for bold is 700 */
+  text-transform: uppercase;
+  border-radius:  50px;
+  cursor: pointer;
+  
 }
